[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "litequery"
version = "0.0.1"
authors = [{ name = "Dima Charnyshou", email = "imryche13@gmail.com" }]
description = "A handy way to interact with an SQLite database from Python"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/imryche/litequery"
Issues = "https://github.com/imryche/litequery/issues"
