[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "litequery"
version = "0.7.1"
authors = [{ name = "Dima Charnyshou", email = "imryche13@gmail.com" }]
description = "A handy way to interact with an SQLite database from Python"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "aiosqlite",
]

[project.urls]
Homepage = "https://github.com/imryche/litequery"
Issues = "https://github.com/imryche/litequery/issues"

[project.scripts]
lq = "litequery.cli:main"

[tool.ruff]
line-length=88
extend-select = ["I", "UP", "ASYNC"]
extend-ignore = ["UP007"]

[tool.ruff.lint]
extend-select = ["I", "UP", "E501", "ASYNC"]

[dependency-groups]
dev = [
    "ipdb>=0.13.13",
    "mypy>=1.14.1",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
]
